<resources>
    <string name="app_name">insureApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ClaimList_Title">Your List Of Claims</string>
    <string name="Bottom_Menu">Menu</string>
    <string name="Bottom_Edit">Edit</string>
    <string name="Bottom_Delete">Delete</string>
    <string name="Bottom_Consult">Consult</string>

    <string name="Text_Claim">Claim</string>

    <string name="Claim_ID">ClaimID</string>

    <string name="my_claims">My Claims</string>
    <string name="list_claim_btn_new_claim">New Claim</string>
    <string name="list_claim">List Claim</string>
    <string name="read_claim">Read Claim</string>
    <string name="new_claim">New Claim</string>
    <string name="insert_claim_hint_insert_title">Insert Claim Title</string>
    <string name="new_claim_hint_insert_note">Texto</string>

    <string name="new_claim_Validation_Date">Validation Date</string>
    <string name="new_claim_Title_Header">Title/Header</string>
    <string name="new_claim_Processing_Date">Processing Date</string>
    <string name="new_claim_Vehicle_registration_plate">Vehicle registration plate</string>
    <string name="new_claim_Status">Status</string>
    <string name="new_claim_Description">Description</string>


    <string name="new_claim_btn_ok">Ok</string>
    <string name="new_claim_btn_cancel">Cancel</string>
    <string name="read_claim_title">Claim Title</string>
    <string name="read_claim_text">Claim text</string>
    <string name="read_claim_btn_done">Done</string>


</resources>
