<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sise.tecnico.mc.project.insureapp.insureCreateClaim"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <EditText
            android:id="@+id/new_claim_titleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/insert_claim_hint_insert_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/new_claim_claimID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="number|textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_claim_validationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="date|datetime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_claim_titleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_claim_title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_claim_title6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_claim_title7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_claim_hint_insert_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            >

            <Button
                android:id="@+id/new_claim_btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_claim_btn_ok"
                android:layout_weight="0.5"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/new_claim_btn_cncl"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/new_claim_btn_cancel" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

